# academic-insight-ai

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: run-commands.md
src/academic_insight_ai/: __init__.py
src/academic_insight_ai/cli/: main.py  run_task.py
src/academic_insight_ai/core/: config.py  validation.py
src/academic_insight_ai/database/: README.md  __init__.py  mysql_reader.py
src/academic_insight_ai/models/: __init__.py  registry.py  types.py
src/academic_insight_ai/models/providers/: base.py  ollama.py
src/academic_insight_ai/tasks/: __init__.py
src/academic_insight_ai/tasks/article_classification/: README.md  config.py  prompt.py  runner.py  schema.py
tests/fixtures/: sample_articles.json  sample_articles_labeled.json
